--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,10 +1,18 @@
-<p style="color: green"><%= notice %></p>
+<div class="main-container">
+  <h2><%= @list.name %></h2>
 
-<%= render @list %>
+  <div class="items-container">
+    <ul>
+      <% @items.each do |item| %>
+        <li class="<%= 'done' if item.is_done %>">
+          <%= check_box_tag "item_#{item.id}", item.id, item.is_done, class: '=begin  =enditem-checkbox' %>
+          <%= item.description %>
+          <%= link_to "X", item_path(item), method: :delete, data: { confirm: "Tem certeza de que deseja excluir este item?" }, class: "btn btn-danger btn-sm" %>
+        </li>
+      <% end %>
+    </ul>
+  </div>
 
-<div>
-  <%= link_to "Edit this list", edit_list_path(@list) %> |
-  <%= link_to "Back to lists", lists_path %>
-
-  <%= button_to "Destroy this list", @list, method: :delete %>
+  <%= link_to "Voltar para listas", lists_path, class: "btn btn-secondary" %>
+  <%= link_to "Criar Novo Item", new_list_item_path(@list), class: "btn btn-primary" %>
 </div>
