--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,11 +1,19 @@
-<% content_for :title, "New item" %>
+<div class="main-container">
+  <h2>Criar Novo Item</h2>
 
-<h1>New item</h1>
+  <%= form_with(model: [@list, @new_item], local: true) do |form| %>
+    <div class="form-group">
+      <%= form.label :description, "Descrição do Item" %>  <!-- Alterado para description -->
+      <%= form.text_field :description, class: "form-control", placeholder: "Digite a descrição do item" %>  <!-- Alterado para description -->
+    </div>
+    
+    <div class="form-group">
+      <%= form.label :is_done, "Está feito?" %>
+      <%= form.check_box :is_done %>
+    </div>
+  
+    <%= form.submit "Criar Item", class: "btn btn-primary" %>
+  <% end %>
 
-<%= render "form", item: @item %>
-
-<br>
-
-<div>
-  <%= link_to "Back to items", items_path %>
+  <%= link_to "Voltar", @list, class: "btn btn-secondary" %>
 </div>
