--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,11 +1,9 @@
-<% content_for :title, "New category" %>
+<div class="main-container">
+  <h2>Nova Categoria</h2>
 
-<h1>New category</h1>
+  <%= render "form", category: @category %>
 
-<%= render "form", category: @category %>
-
-<br>
-
-<div>
-  <%= link_to "Back to categories", categories_path %>
+  <div class="buttons-container">
+    <%= link_to "Voltar para Categorias", categories_path, class: "btn btn-secondary" %>
+  </div>
 </div>
