--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -3,8 +3,8 @@
 
   <%= form_with(model: [@list, @new_item], local: true) do |form| %>
     <div class="form-group">
-      <%= form.label :description, "Descrição do Item" %>  <!-- Alterado para description -->
-      <%= form.text_field :description, class: "form-control", placeholder: "Digite a descrição do item" %>  <!-- Alterado para description -->
+      <%= form.label :description, "Descrição do Item" %>
+      <%= form.text_field :description, class: "form-control", placeholder: "Digite a descrição do item" %>
     </div>
     
     <div class="form-group">
@@ -12,8 +12,9 @@
       <%= form.check_box :is_done %>
     </div>
   
-    <%= form.submit "Criar Item", class: "btn btn-primary" %>
+    <div class="buttons-container">
+      <%= form.submit "Criar Item", class: "btn btn-primary" %>
+      <%= link_to "Voltar", @list, class: "btn btn-secondary" %>
+    </div>
   <% end %>
-
-  <%= link_to "Voltar", @list, class: "btn btn-secondary" %>
 </div>
