--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -1,11 +1,9 @@
-<% content_for :title, "New list" %>
+<div class="main-container">
+  <h2>Nova Lista</h2>
 
-<h1>New list</h1>
+  <%= render "form", list: @list %>
 
-<%= render "form", list: @list %>
-
-<br>
-
-<div>
-  <%= link_to "Back to lists", lists_path %>
+  <div class="buttons-container">
+    <%= link_to "Voltar para Listas", lists_path, class: "btn btn-secondary" %>
+  </div>
 </div>
