feat: SelectBox for categories in list create

--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -21,6 +21,6 @@
 
   <div class="buttons-container">
     <%= link_to "Nova Lista", new_list_path, class: "btn btn-primary" %>
-    <%= link_to "Nova Categoria", new_category_path, class: "btn btn-secondary" %>
+    <%= link_to "Nova Categoria", new_category_path, class: "btn btn-other" %>
   </div>
 </div>
