--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -84,6 +84,16 @@ h1, h2 {
   box-sizing: border-box;
 }
 
+select.form-control {
+  appearance: none;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  background-color: #fff;
+  width: 100%;
+  font-size: 14px;
+}
+
 /* Buttons container */
 .buttons-container {
   display: flex;
@@ -120,6 +130,14 @@ h1, h2 {
 
 .btn-secondary:hover {
   background-color: #5a6268;
+}
+
+.btn-other {
+  background-color: #28a745;
+}
+
+.btn-other:hover {
+  background-color: #218838;
 }
 
 .btn-danger {
