refactor: New create category

--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,9 +1,15 @@
 <div class="main-container">
   <h2>Nova Categoria</h2>
 
-  <%= render "form", category: @category %>
+  <%= form_with(model: @category, local: true) do |form| %>
+    <div class="form-group">
+      <%= form.label :name, "Nome da categoria" %>
+      <%= form.text_field :name, class: "form-control", placeholder: "Digite o nome da categoria" %>
+    </div>
 
-  <div class="buttons-container">
-    <%= link_to "Voltar para Categorias", categories_path, class: "btn btn-secondary" %>
-  </div>
+    <div class="buttons-container">
+      <%= link_to "Voltar para Listas", lists_path, class: "btn btn-secondary" %>
+      <%= form.submit "Criar Categoria", class: "btn btn-primary" %>
+    </div>
+  <% end %>
 </div>
