--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -8,7 +8,7 @@
     </div>
 
     <div class="buttons-container">
-      <%= link_to "Voltar para Listas", lists_path, class: "btn btn-secondary" %>
+      <%= link_to "Voltar", lists_path, class: "btn btn-secondary" %>
       <%= form.submit "Criar Categoria", class: "btn btn-primary" %>
     </div>
   <% end %>
