--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -5,7 +5,21 @@
   <div class="categories-container">
     <% @categories_with_lists.each do |category| %>
       <div class="category-item">
-        <h3><%= category.name %></h3>
+        <h3 class="category-header">
+          <span class="category-name"><%= category.name %></span>
+          <div class="action-buttons">
+            <%= form_with url: edit_category_path(category), method: :get, class: "inline-form", local: true do %>
+              <button type="submit" class="edit-icon" title="Editar Categoria">
+                <i class="fas fa-pencil-alt"></i>
+              </button>
+            <% end %>
+            <%= form_with url: category_path(category), method: :delete, class: "inline-form", local: true do %>
+              <button type="submit" class="delete-icon" data-confirm="Tem certeza que deseja excluir esta categoria?" title="Excluir Categoria">
+                <i class="fas fa-trash-alt"></i>
+              </button>
+            <% end %>
+          </div>
+        </h3>
         <% if category.lists.any? %>
           <ul>
             <% category.lists.each do |list| %>
