--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -13,7 +13,7 @@
     </div>
 
     <div class="buttons-container">
-      <%= link_to "Voltar para Listas", lists_path, class: "btn btn-secondary" %>
+      <%= link_to "Voltar", lists_path, class: "btn btn-secondary" %>
       <%= form.submit "Criar Lista", class: "btn btn-primary" %>
     </div>
   <% end %>
