--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,12 +1,20 @@
-<% content_for :title, "Editing item" %>
+<div class="main-container">
+  <h2>Editar Item</h2>
 
-<h1>Editing item</h1>
-
-<%= render "form", item: @item %>
-
-<br>
-
-<div>
-  <%= link_to "Show this item", @item %> |
-  <%= link_to "Back to items", items_path %>
+  <%= form_with(model: [@list, @item], local: true) do |form| %>
+    <div class="form-group">
+      <%= form.label :description, "Descrição do Item" %>
+      <%= form.text_field :description, class: "form-control", placeholder: "Digite a descrição do item" %>
+    </div>
+    
+    <div class="form-group">
+      <%= form.label :is_done, "Está feito?" %>
+      <%= form.check_box :is_done %>
+    </div>
+  
+    <div class="buttons-container">
+      <%= link_to "Cancelar", @list, class: "btn btn-danger" %>
+      <%= form.submit "Salvar Alterações", class: "btn btn-primary" %>
+    </div>
+  <% end %>
 </div>
