--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -278,20 +278,39 @@ select.form-control {
 
 .item-row {
   display: flex;
-  align-items: center;
   justify-content: space-between;
+  align-items: center;
   margin-bottom: 8px;
-  margin-right: 10px;
   padding: 10px 0;
   border-bottom: 1px solid #eee;
-  min-width: 300px;
 }
+
 .item-row.done .item-description {
   text-decoration: line-through;
   color: #888;
 }
 
+.item-content {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
 .item-description {
-  flex-grow: 1;
-  margin-left: 10px;
+  margin-right: 10px;
+}
+
+/* Tags */
+.tags {
+  display: flex;
+  gap: 5px;
+}
+
+.tag {
+  padding: 4px 8px;
+  border-radius: 12px;
+  font-size: 12px;
+  color: white;
+  font-weight: bold;
+  text-transform: uppercase;
 }
