--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -6,6 +6,15 @@
       <%= form.label :description, "Descrição do Item" %>
       <%= form.text_field :description, class: "form-control", placeholder: "Digite a descrição do item" %>
     </div>
+
+    <div class="form-group">
+      <%= form.label :tag_ids, "Tags" %>
+      <%= form.collection_check_boxes :tag_ids, Tag.all, :id, :name do |b| %>
+        <div class="checkbox">
+          <%= b.check_box %> <%= b.text %>
+        </div>
+      <% end %>
+    </div>
     
     <div class="form-group">
       <%= form.label :is_done, "Está feito?" %>
