feat: Edit and List Tags

--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -53,6 +53,7 @@
 
   <div class="buttons-container">
     <%= link_to "Voltar", lists_path, class: "btn btn-secondary" %>
+    <%= link_to "Visualizar Tags", tags_path, class: "btn btn-primary" %>
     <%= link_to "Criar Nova Tag", new_tag_path, class: "btn btn-other" %>
     <%= link_to "Adicionar Novo Item", new_list_item_path(@list), class: "btn btn-primary" %>
   </div>
