--- a/app/views/tags/edit.html.erb
+++ b/app/views/tags/edit.html.erb
@@ -1,12 +1,15 @@
-<% content_for :title, "Editing tag" %>
+<div class="main-container">
+  <h2>Editar Tag</h2>
 
-<h1>Editing tag</h1>
+  <%= form_with(model: @tag, local: true) do |form| %>
+    <div class="form-group">
+      <%= form.label :name, "Nome da Tag" %>
+      <%= form.text_field :name, class: "form-control", placeholder: "Digite o nome da tag" %>
+    </div>
 
-<%= render "form", tag: @tag %>
-
-<br>
-
-<div>
-  <%= link_to "Show this tag", @tag %> |
-  <%= link_to "Back to tags", tags_path %>
+    <div class="buttons-container">
+      <%= link_to "Cancelar", tags_path, class: "btn btn-secondary" %>
+      <%= form.submit "Salvar Alterações", class: "btn btn-primary" %>
+    </div>
+  <% end %>
 </div>
