--- a/app/views/tags/new.html.erb
+++ b/app/views/tags/new.html.erb
@@ -8,7 +8,7 @@
     </div>
 
     <div class="buttons-container">
-      <%= link_to "Voltar", @list, class: "btn btn-secondary" %>
+      <%= link_to "Voltar", tags_path, class: "btn btn-secondary" %>
       <%= form.submit "Criar Tag", class: "btn btn-primary" %>
     </div>
   <% end %>
