--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -189,6 +189,7 @@ select.form-control {
 /* Buttons container */
 .buttons-container {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   gap: 10px;
   margin-top: 20px;
@@ -207,11 +208,20 @@ select.form-control {
   cursor: pointer;
   font-size: 14px;
   transition: background-color 0.3s ease, transform 0.2s ease;
+  flex: 1 1 calc(25% - 10px);
+  min-width: 100px;
 }
 
 .btn:hover {
   background-color: #0056b3;
   transform: scale(1.1);
+}
+
+/* Responsivity for little screens */
+@media (max-width: 768px) {
+  .btn {
+    flex: 1 1 calc(50% - 10px);
+  }
 }
 
 .btn-primary {
@@ -313,4 +323,28 @@ select.form-control {
   color: white;
   font-weight: bold;
   text-transform: uppercase;
+}
+
+.tags-container {
+  width: 100%;
+  max-width: 600px;
+  margin: 20px auto;
+  padding: 10px;
+  background-color: #f9f9f9;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+}
+
+.tag-row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 10px;
+  padding: 8px;
+  border-bottom: 1px solid #eee;
+}
+
+.tag-name {
+  font-size: 16px;
+  font-weight: bold;
 }
