--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -8,6 +8,15 @@
     </div>
     
     <div class="form-group">
+      <%= form.label :tag_ids, "Tags" %>
+      <%= form.collection_check_boxes :tag_ids, Tag.all, :id, :name do |b| %>
+        <div class="checkbox">
+          <%= b.check_box %> <%= b.text %>
+        </div>
+      <% end %>
+    </div>
+
+    <div class="form-group">
       <%= form.label :is_done, "Está feito?" %>
       <%= form.check_box :is_done %>
     </div>
